<resources>
    <string name="app_name">Campus</string>
    <string name="describe">点击图片，进入选择的功能模块</string>
    <string name="jk_xinfeng">信封式账单</string>
    <string name="jk_edit">账单编辑</string>
    <string name="jk_leibie">类别：</string>
    <string name="jk_hint.1">请输入类别！</string>
    <string name="jk_zonge">总额：</string>
    <string name="jk_hint.2"></string>
    <string name="jk_yue">余额：</string>
    <string name="jk_hint.3"></string>
    <string name="jk_rq">日期</string>
    <string name="jk_hf">花费</string>
    <string name="jk_xm">项目</string>
    <string name="jk_rq2">日期:</string>
    <string name="jk_hf2">花费:</string>
    <string name="jk_xm2">项目:</string>
    <string name="jk_yuan">元</string>
    <string name="bq_top">随手记</string>
    <string name="rlm">Campus</string>
    <string name="rlm_rl">日历</string>
    <string name="rlm_rw">任务 </string>
    <string name="rlm_tx">提醒 </string>
    <string name="rl_rw">任务 ：</string>
    <string name="rl_tx">提醒 ：</string>
    <string name="rl_sj">今日随手</string>
    <string name="rl_zd">今日账单</string>
    <string name="rl_xc">今日相册</string>
    <string name="rw">所有任务 </string>
    <string name="rw_sjd">时间段： </string>
    <string name="rwa_sure">确定</string>
    <string name="rw_add">新增任务 </string>
    <string name="rit_wcd"> 完成度： </string>
    <string name="tx">所有提醒 </string>
    <string name="tx_sjd">时间点： </string>
    <string name="tx_add">新增提醒 </string>
    <string name="txa_edit">编辑提醒</string>
    <string name="xc">记录相册</string>
    <string name="xc_sc">上传相片</string>
    <string name="xcf_mc">相册名称</string>
    <string name="sjed_add">添加内容</string>
    <string name="r_item1">此处添加一个进度条</string>
    <string name="r_item2">获取并显示任务时间段</string>
    <string name="r_item3">获取并显示任务</string>
    <string name="rl1">此处放置一个日历</string>
    <string name="rw1">TimePicker</string>
    <string name="rwa_edit">编辑任务</string>
    <string name="jka_item1">此处想放置一个计算器</string>
    <string name="sj_item1">获取系统日期与时间并显示在此地方</string>
    <string name="xcf_item1">获取系统日期并显示在此地方</string>
    <string name="title_activity_jinku_create">JinkuCreateActivity</string>
    <string name="title_activity_album">AlbumActivity</string>
    <string name="title_activity_calendar_manage">CalendarManageActivity</string>
    <string name="title_activity_task_manage">TaskManageActivity</string>
    <string name="title_activity_calendar_remind">CalendarRemindActivity</string>
    <string name="title_activity_jinku_add">JinkuAddActivity</string>
    <string name="title_activity_album_info_show">AlbumInfoShowActivity</string>
    <string name="title_activity_add_bianqian">AddBianqianActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_jinku_infor_show">JinkuInforShowActivity</string>
    <string name="title_activity_task_add">TaskAddActivity</string>
    <string name="title_activity_remind_add">RemindAddActivity</string>
</resources>
