<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rtxlayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rw_bk1"
        android:gravity="center"
        android:text="@string/tx_add" />

    <LinearLayout
        android:id="@+id/rtxlayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rw_bk1"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/tx_sjd" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/rw1" />
    </LinearLayout>

    <EditText
        android:id="@+id/txa_tx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rw_bk2"
        android:gravity="center"
        android:hint="@string/txa_edit"
        android:minWidth="200dp" />

    <ImageButton
        android:id="@+id/txa_qd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#0fff"
        android:contentDescription="@string/describe"
        android:src="@drawable/sure2"
        android:text="@string/rwa_sure"
        android:textSize="12sp" />

</LinearLayout>