<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rllayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rl_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/rllayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="240dp"
            android:layout_height="250dp"
            android:gravity="center"
            android:text="@string/rl1"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rllayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/rllayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rl_rw" />

            <EditText
                android:id="@+id/rl_rw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint=""
                android:minWidth="200dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rllayout5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rl_tx" />

            <EditText
                android:id="@+id/rl_tx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint=""
                android:minWidth="200dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rllayout6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/rl_ss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/rl_sj"
                android:textColor="#338af5"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/rl_zd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/rl_zd"
                android:textColor="#338af5"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/rl_xc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/rl_xc"
                android:textColor="#338af5"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>