<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/jkc_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/jkaddlayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/jkaddlayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jk_rq2"
                android:textSize="20sp" />

            <!-- 此处想放置一个TimePicker -->
        </LinearLayout>

        <LinearLayout
            android:id="@+id/jkaddlayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jk_hf2"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/jkad_yuan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint=""
                android:minWidth="150dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jk_yuan"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/jkaddlayout5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jk_xm2"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/jkad_xm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint=""
                android:minWidth="150dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/jkaddlayout6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <!-- 此处想放置一个计算器 -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jka_item1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/jkaddlayout7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/jkad_qd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#0fff"
            android:contentDescription="@string/describe"
            android:src="@drawable/sure2" />
    </LinearLayout>

</LinearLayout>